src/main/java/com/example/performance_reservation/error/BaseErrorCode.java
package com.example.performance_reservation.error;

public interface BaseErrorCode {
    ErrorResponse getErrorResponse();
    String getMessage();
}
